[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/UI/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://src/UI/SanityBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/frame.png" type="Texture" id=5]
[ext_resource path="res://src/UI/Tooltip/Tooltip.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 256 )

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 8 )
texture = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_top = 280.0
margin_bottom = 296.0

[node name="Health" type="Label" parent="."]
margin_left = -24.0
margin_top = 280.0
margin_right = 24.0
margin_bottom = 296.0
text = "0/0"
align = 1
valign = 1

[node name="SanityBar" parent="." instance=ExtResource( 4 )]
margin_left = -128.0
margin_top = -288.0
margin_bottom = -274.0

[node name="Selected" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8.10623e-06 )
scale = Vector2( 1, 1.088 )
texture = ExtResource( 5 )

[node name="Effects" type="GridContainer" parent="."]
margin_left = -120.0
margin_top = 304.0
margin_right = 120.0
margin_bottom = 344.0
custom_constants/vseparation = 30
custom_constants/hseparation = 60
columns = 20

[node name="Block" type="Label" parent="."]
visible = false
margin_left = 48.0
margin_top = 272.0
margin_right = 80.0
margin_bottom = 286.0
text = "1"
align = 1
valign = 1

[node name="Tooltip" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
